	PR c++/20905 	* parser.c (cp_parser_type_specifier_seq): Add is_condition 	parameter. 	(cp_parser_new_type_id): Pass it. 	(cp_parser_condition): Likewise. 	(cp_parser_conversion_type_id): Likewise. 	(cp_parser_type_id): Likewise. 	(cp_parser_type_specifier_seq): In a condition, do not allow 	invalid type-specifier combinations. 	(cp_parser_exception_declaration): Adjust call to 	cp_parser_type_specifier_seq.

PR c++/20905
	* g++.dg/parse/cond2.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@97857 138bc75d-0d04-0410-961f-82ee72b054a4